--- a/fw.conf
+++ b/fw.conf
@@ -49,3 +49,11 @@ lms_dbhost=127.0.0.1
 lmsd=/usr/local/lmsd/bin/lmsd
 lmsd_host=newgateway
 lmsd_shaper_instance=fw_shaper
+
+#Shaper defaults. Is used when not defined in shaper_file.
+DEFAULT_ISP_RX_LIMIT=800000kbit
+DEFAULT_ISP_TX_LIMIT=800000kbit
+DEFAULT_GW_TO_LAN_LIMIT=200000kbit
+DEFAULT_GW_TO_WAN_LIMIT=100000kbit
+DEFAULT_LAN_DEFAULT_LIMIT=1024kbit
+DEFAULT_WAN_DEFAULT_LIMIT=1024kbit
