fw.conf fwfunctions

--- a/fw.conf
+++ b/fw.conf
@@ -53,7 +53,18 @@ lmsd_shaper_instance=fw_shaper
 #Shaper defaults. Is used when not defined in shaper_file.
 DEFAULT_ISP_RX_LIMIT=800000kbit
 DEFAULT_ISP_TX_LIMIT=800000kbit
-DEFAULT_GW_TO_LAN_LIMIT=200000kbit
-DEFAULT_GW_TO_WAN_LIMIT=100000kbit
-DEFAULT_LAN_UNCLASIFIED_LIMIT=128kbit
-DEFAULT_WAN_UNCLASSIFIED_LIMIT=128kbit
+DEFAULT_GW_TO_LAN_CEIL_LIMIT=200000kbit
+DEFAULT_GW_TO_WAN_CEIL_LIMIT=100000kbit
+DEFAULT_GW_TO_LAN_RATE_LIMIT=10000kbit
+DEFAULT_GW_TO_WAN_RATE_LIMIT=10000kbit
+DEFAULT_LAN_UNCLASSIFIED_RATE_LIMIT=8kbit
+DEFAULT_WAN_UNCLASSIFIED_RATE_LIMIT=8kbit
+DEFAULT_LAN_UNCLASSIFIED_CEIL_LIMIT=100kbit
+DEFAULT_WAN_UNCLASSIFIED_CEIL_LIMIT=100kbit
+DEFAULT_GW_TO_LAN_PRIORITY=2
+DEFAULT_GW_TO_WAN_PRIORITY=2
+DEFAULT_LAN_UNCLASSIFIED_PRIORITY=7
+DEFAULT_WAN_UNCLASSIFIED_PRIORITY=7
+DEFAULT_LAN_HOSTS_PRIORITY=2
+DEFAULT_WAN_HOSTS_PRIORITY=2
+BURST="15k"
