fw.conf fwfunctions

--- a/fw.conf
+++ b/fw.conf
@@ -51,6 +51,7 @@ lmsd_host=newgateway
 lmsd_shaper_instance=fw_shaper
 
 #Shaper defaults. Is used when not defined in shaper_file.
+DEFAULT_LAN_INTERFACE_SPEED_LIMIT=900000kbit
 DEFAULT_ISP_RX_LIMIT=800000kbit
 DEFAULT_ISP_TX_LIMIT=800000kbit
 DEFAULT_GW_TO_LAN_CEIL_LIMIT=200000kbit
