update fw.conf fwfunctions

--- a/fw.conf
+++ b/fw.conf
@@ -68,4 +68,4 @@ DEFAULT_LAN_UNCLASSIFIED_PRIORITY=7
 DEFAULT_WAN_UNCLASSIFIED_PRIORITY=7
 DEFAULT_LAN_HOSTS_PRIORITY=2
 DEFAULT_WAN_HOSTS_PRIORITY=2
-BURST="15k"
+BURST=15k
