update fw.conf fwfunctions

--- a/fw.conf
+++ b/fw.conf
@@ -69,3 +69,15 @@ DEFAULT_WAN_UNCLASSIFIED_PRIORITY=7
 DEFAULT_LAN_HOSTS_PRIORITY=2
 DEFAULT_WAN_HOSTS_PRIORITY=2
 BURST=15k
+
+###Command executation methods
+###On local host
+#exec_cmd="eval"
+###On remote host
+exec_cmd="ssh $sshurl"
+
+###Get config methods
+###From local host
+#get_cmd="cp"
+###From remote host
+get_cmd="scp scpurl"
