add lan_ddos_protected_ports function

--- a/fw.conf
+++ b/fw.conf
@@ -18,6 +18,7 @@ public_ip_file=fw_public_ip
 routed_nets_file=fw_routed_ip
 blacklist_file=fw_blacklist
 lan_banned_dst_ports_file=fw_lan_banned_dst_ports
+lan_ddos_protected_ports_file=fw_lan_ddos_protected_ports
 shaper_file=fw_shaper
 dhcp_conf_file=dhcpd.conf
 
