Update fw.conf - Added option enable or disable logging

--- a/fw.conf
+++ b/fw.conf
@@ -11,6 +11,9 @@
 #  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 #  GNU General Public License for more details.
 
+#Set DEBUG to "no" to disable logging.
+DEBUG="yes"
+
 #Names of config files
 nat_11_file=fw_nat_1-1
 nat_1n_ip_file=fw_nat_1-n
