--- a/fw.conf
+++ b/fw.conf
@@ -11,6 +11,16 @@
 #  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 #  GNU General Public License for more details.
 
+#Paths to config dirs
+installdir=/opt/gateway
+scriptsdir=$installdir/scripts
+confdir=$installdir/conf
+oldconfdir=$installdir/oldconf
+
+#Path to log
+logdir=/var/log
+logfile=fw.log
+
 #Set DEBUG to "no" to disable logging.
 DEBUG="yes"
 
