--- a/fw.conf
+++ b/fw.conf
@@ -11,6 +11,9 @@
 #  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 #  GNU General Public License for more details.
 
+#Set DEBUG to "no" to disable logging.
+DEBUG="yes"
+
 #Paths to config dirs
 installdir=/opt/gateway
 scriptsdir=$installdir/scripts
@@ -21,9 +24,6 @@ oldconfdir=$installdir/oldconf
 logdir=/var/log
 logfile=fw.log
 
-#Set DEBUG to "no" to disable logging.
-DEBUG="yes"
-
 #Names of config files
 nat_11_file=fw_nat_1-1
 nat_1n_ip_file=fw_nat_1-n
@@ -31,14 +31,15 @@ public_ip_file=fw_public_ip
 routed_nets_file=fw_routed_ip
 blacklist_file=fw_blacklist
 lan_banned_dst_ports_file=fw_lan_banned_dst_ports
+wan_banned_dst_ports_file=fw_wan_banned_dst_ports
 lan_ddos_protected_ports_file=fw_lan_ddos_protected_ports
 shaper_file=fw_shaper
 dhcp_conf_file=dhcpd.conf
 
 #Ethernet interfaces
 #WAN=$(ip r|grep default |awk '{print $5}') #Use if you want automaticly determining WAN interface.
-WAN=enp2s0
-LAN=enp3s0
+WAN=eth0
+LAN=eth1
 MGMT=eno1
 
 #Proxy IP address
@@ -51,13 +52,13 @@ lms_ip="192.168.1.253"
 ###On local host
 #exec_cmd="eval"
 ###On remote host with LMS database
-exec_cmd="ssh root@$lms_ip"
+exec_cmd="timeout 10 ssh root@$lms_ip"
 
 ###Get config methods
 ###From local host
 #copy_cmd_url="cp /opt/gateway"
 ###From remote host
-copy_cmd_url="scp root@$lms_ip:/opt/gateway"
+copy_cmd_url="timeout 10 scp root@$lms_ip:/opt/gateway"
 
 #LMS database connection credentials
 lms_db=lms
@@ -70,11 +71,11 @@ lmsd=/usr/local/lmsd/bin/lmsd
 lmsd_host=newgateway
 lmsd_shaper_instance=fw_shaper
 
-#Shaper defaults. Is used when not defined in shaper_file.
-DEFAULT_LAN_INTERFACE_SPEED_LIMIT=900000kbit
-DEFAULT_ISP_RX_LIMIT=800000kbit
-DEFAULT_ISP_TX_LIMIT=800000kbit
-DEFAULT_GW_TO_LAN_CEIL_LIMIT=200000kbit
+#Shaper defaults. Used when is not defined in shaper_file.
+DEFAULT_LAN_INTERFACE_SPEED_LIMIT=9900000kbit
+DEFAULT_ISP_RX_LIMIT=1800000kbit
+DEFAULT_ISP_TX_LIMIT=1800000kbit
+DEFAULT_GW_TO_LAN_CEIL_LIMIT=300000kbit
 DEFAULT_GW_TO_WAN_CEIL_LIMIT=100000kbit
 DEFAULT_GW_TO_LAN_RATE_LIMIT=10000kbit
 DEFAULT_GW_TO_WAN_RATE_LIMIT=10000kbit
