--- a/fw.conf
+++ b/fw.conf
@@ -91,3 +91,10 @@ DEFAULT_WAN_UNCLASSIFIED_PRIORITY=7
 DEFAULT_LAN_HOSTS_PRIORITY=2
 DEFAULT_WAN_HOSTS_PRIORITY=2
 BURST=15k
+
+# The IP address of the log backup server
+log_backup_server_ip=127.0.0.1
+
+# The IP address that will access the server via ssh
+lan_fw_operator_ip=127.0.0.1
+wan_fw_operator_ip=127.0.0.1
