--- a/tools/autossh_reverse_tunnel.service
+++ b/tools/autossh_reverse_tunnel.service
@@ -4,7 +4,7 @@ After=network-online.target
 
 [Service]
 ExecStart=/opt/gateway/scripts/autossh_reverse_tunnel.sh
-User=root
+User=localuser
 Restart=on-failure
 RestartSec=60s
 #StartLimitBurst=5
